2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (free_display_info), (restart_screensaver),
	(apply_config), (revert_config), (cb_dialog_response), (main): clean up
	code a bit and fix a few leaks

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* display-capplet.png: remove

	* Makefile.am:
	* display-properties.desktop.in.in:
	* icons/16x16/gnome-display-properties.png:
	* icons/22x22/gnome-display-properties.png:
	* icons/24x24/gnome-display-properties.png:
	* icons/32x32/gnome-display-properties.png:
	* icons/scalable/gnome-display-properties.svg:
	* main.c: (create_dialog): add and use new icon by Jakub Steiner
	<jimmac@ximian.com>. Closes bug #375230.

2007-06-26  Michael Terry  <mike@mterry.name>

	* Makefile.am, main.c, display-properties.desktop.in.in: Use
	icon theme instead of global pixmaps dir for app icon. Closes
	bug #450777.

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (run_revert_dialog), (cb_dialog_response): don't make the
	revert dialog transient since it's actually never on screen at the
	same time as the main dialog. Closes bug #448160.

2007-05-22  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (get_current_resolution): surivive XRandR returning weird
	results for some dual-screen setups. This fixes the crash in bug
	#356520, but a proper fix for handling this situation is still
	necessary, unless this is just a driver/X bug...

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* display-properties.desktop.in.in: renamed Bugzilla product.

2007-03-23  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (show_resolution): add 720x576 (PAL) to the list of valid
	resolutions. Closes bug #325548.

2007-03-21  Jens Granseuer  <jensgr@gmx.net>

	* main.c: uppercase the rotation options. Closes bug #410959.

2007-03-01  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (create_dialog): fix double-free reported by Sandino
	Flores-Moreno. Closes bug #413352.

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: Mark a struct static.
