@@ -1,5 +1,9 @@
 2007-10-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* main.c: (run_revert_dialog), (main): fix string capitalization
+
+2007-10-27  Jens Granseuer  <jensgr@gmx.net>
+
 	* main.c: (free_display_info), (restart_screensaver),
 	(apply_config), (revert_config), (cb_dialog_response), (main): clean up
 	code a bit and fix a few leaks
